--- a/In-class_Ex/In-class_Ex5/In-class_Ex5.qmd
+++ b/In-class_Ex/In-class_Ex5/In-class_Ex5.qmd
@@ -5,7 +5,17 @@ editor: visual
 
 # Overview
 
-### Setting the Scene
+In this in-class exercise, I utilized the following Geographical Weighted Logistic Regression (GWLR) algorithm:
+
+-   Weighting functions (kernel)
+
+-   Weighting schemes
+
+-   Bandwidth
+
+# Getting Started
+
+## Setting the Scene
 
 -   To build an explanatory model to discover factor affecting water point status in Osun State, Nigeria (one of the LGAs with the highest percentage of non-functional waterpoints, over 40% which is more than the national average)
 
@@ -17,7 +27,35 @@ editor: visual
 
     -   ﻿﻿**Osun\_ wp_sf.rds** contained water points within Osun State. It is in sf point data frame.
 
-### Setting the Analytical Tools
+## **Model Variables**
+
+-   ﻿﻿**Dependent** variable: Water point status (i.e. functional/non-functional)
+
+-   ﻿﻿**Independent** variables:
+
+    -   ﻿﻿distance_to_primary_road,
+
+    -   ﻿﻿distance_to_secondary_road,
+
+    -   ﻿distance_to_tertiary_road,
+
+    -   ﻿distance_to_city,
+
+    -   ﻿distance_to_town,
+
+    -   ﻿﻿water_point_population,
+
+    -   ﻿﻿local_population_1km,
+
+    -   ﻿﻿usage_capacity,
+
+    -   ﻿﻿is_urban,
+
+    -   ﻿﻿water source clean
+
+Note: All variables are continuous, **except** for the last 3 variables (categorical).
+
+## Setting the Analytical Tools
 
 The code chunk below installs and loads the following R packages:
 
@@ -49,14 +87,16 @@ New packages:
 pacman::p_load(sf, tidyverse, funModeling, blorr, corrplot, ggpubr, spdep, GWmodel, tmap, skimr, caret)
 ```
 
-# **Data Import**
-
 ## Importing the Analytical data
 
 ```{r}
 Osun <- read_rds("rds/Osun.rds")
 Osun_wp_sf <- read_rds("rds/Osun_wp_sf.rds")
 ```
+
+# Exploratory Data Analysis (EDA)
+
+The code chunk below uses freq() to see the breakdown of the 'status' column by functional and non-functional waterpoints, represented by 'True' and 'False' respectively.
 
 ```{r}
 Osun_wp_sf %>%
@@ -65,14 +105,7 @@ Osun_wp_sf %>%
 
 ## Importing Nigeria LGA level boundary
 
-By using T or F, R will treat the data set as binary. Data cleansing prior to analysis
-
-```{r eval=FALSE}
-
-Osun_wp_sf <- replace_na(`status_clean`),
-"Unknown")) %>%
-  filter(`status_clean` !=)
-```
+The code chunk below plots the status of the waterpoints on the Nigeria LGA level map:
 
 ```{r}
 tmap_mode("view")
@@ -85,46 +118,22 @@ tm_shape(Osun_wp_sf)+
   tm_view(set.zoom.limits = c(9,12))
 ```
 
-## Exploratory Data Analysis
+**Observation:** From the map above, we can see that both functional and non-functional waterpoints are quite evenly scattered across LGAs in Nigeria. To understand the logical relationship between status of waterpoints and the LGAs, we can do further analysis on different data variables available.
 
-### Summary Statistics: skimr
+## Summary Statistics using skimr
+
+The code chunk below generates summary statistics with skim() of the skimr package:
 
 ```{r}
 Osun_wp_sf %>%
   skim()
 ```
 
-**Observations:** From the results above, we can see that install_year and fecal_coliform_value have excessive number of missing values, thus should not be used in our analysis to prevent data loss.
+**Observation:** From the results above, we can see that install_year and fecal_coliform_value have excessive number of missing values, thus should not be used in our analysis to prevent data loss.
 
 -   Note to think of **extent of data loss:** number of loss in comparison to total number of data points
 
-**Model Variables:**
-
--   ﻿﻿Dependent variable: Water point status (i.e. functional/non-functional)
-
--   ﻿﻿Independent variables:
-
-    -   ﻿﻿distance_to_primary_road,
-
-    -   ﻿﻿distance_to_secondary_road,
-
-    -   ﻿distance_to_tertiary_road,
-
-    -   ﻿distance_to_city,
-
-    -   ﻿distance_to_town,
-
-    -   ﻿﻿water_point_population,
-
-    -   ﻿﻿local_population_1km,
-
-    -   ﻿﻿usage_capacity,
-
-    -   ﻿﻿is_urban,
-
-    -   ﻿﻿water source clean
-
-The code chunk below is to exclude all missing values + recoup data type into factor.
+The code chunk below is to exclude all missing values + change data type into factor:
 
 ```{r}
 Osun_wp_sf_clean <- Osun_wp_sf %>%
@@ -143,9 +152,9 @@ Osun_wp_sf_clean <- Osun_wp_sf %>%
   mutate(usage_capacity = as.factor(usage_capacity))
 ```
 
-Note that **usage_capacity** is no longer [numeric (assume to be continuous)]{.underline} in nature and has become a factor. **Osun_wp_sf_clean dataset** has 4 less records than Osun_wp_sf.
+Note: **usage_capacity** is no longer [numeric (assume to be continuous)]{.underline} in nature and has become a factor. **Osun_wp_sf_clean dataset** has 4 less records than Osun_wp_sf.
 
-## Correlation Analysis
+# Correlation Analysis
 
 The code chunk below drops irrelevant data columns:
 
@@ -169,9 +178,9 @@ corrplot.mixed(cluster_vars.cor,
                tl.col = "black")
 ```
 
-**Observation:** From the results above, there are no variables that are highly correlated (0.8). Thus, we can be comfortable that there is no sign of multi-collinearity here.
+**Observation:** From the results above, there are no variables that are highly correlated (\>=0.8). Thus, there is no sign of multi-collinearity between these variables.
 
-### Regression
+# Building a Logistic Regression Model
 
 glm of R is used to calibrate a logistic regression for the water point status.
 
@@ -190,11 +199,25 @@ model <- glm(status ~ distance_to_primary_road +
              family = binomial(link = "logit"))
 ```
 
-Instead of using typical R report, blr_regress() of [blorr](https://cran.r-project.org/web/packages/blorr/vignettes/introduction.html) package is used.
+Instead of using a typical R report, blr_regress() of [blorr](https://cran.r-project.org/web/packages/blorr/vignettes/introduction.html) package is used.
 
 ```{r}
 blr_regress(model)
 ```
+
+From the report above, we can exclude the **distance_to_primary_road** and **distance_to_secondary_road** as their p-value \> 0.05, so we cannot reject null hypothesis and the test result is not statistically significant.
+
+## Model Assessment of Non-Geographically Weighted Logistic Regression Model
+
+![](images/paste-7DA5BF78.png){width="313"}
+
+The **validity of a cut-off** (e.g. 0.5) is measured using sensitivity, specificity and accuracy.
+
+-   **Sensitivity:** The % of correctly classified events out of all events = TP / (TP + FN)
+
+-   **Specificity:** The % of correctly classified non-events out of all non-events = TN / (TN + FP)
+
+-   **Accuracy:** The % of correctly classified events out of all events = (TP + TN) / (TP + FP + TN + FN)
 
 Using the code chunk below, we can get the confusion matrix:
 
@@ -202,9 +225,15 @@ Using the code chunk below, we can get the confusion matrix:
 blr_confusion_matrix(model, cutoff = 0.5)
 ```
 
-## Building Geographically Weighted Logistic Regression
+**Observation:** From the results, we can see that the model gives us an accuracy of 67.4%, which is better than guessing (50%).
 
-### Creating from sf to sp data frame
+The sensitivity and specificity are 72.1% and 61.5% respectively, which shows that the true positives are slightly higher than the true negative prediction rates.
+
+# Building Geographically Weighted Logistic Regression
+
+## Converting from sf to sp data frame
+
+The code chunk below converts all variables laid out in the Model Variables section from sf dataframe to sp dataframe:
 
 ```{r}
 Osun_wp_sp <- Osun_wp_sf_clean %>%
@@ -223,7 +252,11 @@ Osun_wp_sp <- Osun_wp_sf_clean %>%
 Osun_wp_sp
 ```
 
-```{r eval = FALSE}
+## Building fixed bandwidth GWR model
+
+The code chunk below computes the distance matrix using ggwr() of the sp package:
+
+```{r}
 bw.fixed <- bw.ggwr(status ~
 distance_to_primary_road +
                distance_to_secondary_road +
@@ -243,49 +276,55 @@ distance_to_primary_road +
               longlat = FALSE)
 ```
 
-```{r eval = FALSE}
+```{r}
 bw.fixed
 ```
 
+We need to remove 2 statistically insignificant data columns (p-value \> 0.05): ***distance_to_primary_road** and **distance_to_secondary_road***
+
 ```{r}
 gwlr.fixed <- ggwr.basic(status ~
-              distance_to_primary_road +
-               distance_to_secondary_road +
-               distance_to_tertiary_road +
-               distance_to_city + 
-               distance_to_town +
-               is_urban +
-               usage_capacity + 
-               water_source_clean +
-               water_point_population +
-               local_population_1km,
-              data = Osun_wp_sp,
-              bw = 2599.672,
-              family = "binomial",
-              kernel = "gaussian",
-              adaptive = FALSE,
-              longlat = FALSE)
+                           distance_to_tertiary_road +
+                           distance_to_city +
+                           distance_to_town +
+                           is_urban +
+                           usage_capacity +
+                           water_source_clean +
+                           water_point_population +
+                           local_population_1km,
+                         data = Osun_wp_sp,
+                         bw = bw.fixed,
+                         family = "binomial",
+                         kernel = "gaussian",
+                         adaptive = FALSE,
+                         longlat = FALSE)
 ```
 
 ```{r}
 gwlr.fixed
 ```
 
-### **Converting SDF into sf data.frame**
+From the results above, AIC reduced from 5708.9 (non-geographically weighted regression model) to 4500.0 (geographically weighted regression model), thus there was an improvement in the regression model.
 
-To assess the performance of gwLR, firslty, we will convert the SDF object in as dataframe by using the code chunk below.
+## Model Assessment of Geographically Weighted Logistic Regression Model
+
+### Converting SDF into sf data.frame
+
+To assess the performance of gwlr, firslty, we will convert the SDF object in as dataframe by using the code chunk below:
 
 ```{r}
 gwr.fixed <- as.data.frame(gwlr.fixed$SDF)
 ```
 
-Next, we will be labelling yhat values greater or equal to 0.5 into 1 and else 0. The result of the logic comparison operation will be saved into a field called most.
+Next, we will be labelling yhat values greater or equal to 0.5 into 1 and else 0. The result of the logic comparison operation will be saved into a field called *most*.
 
 ```{r}
 gwr.fixed <- gwr.fixed %>%
   mutate(most = ifelse(
     gwr.fixed$yhat >= 0.5,T,F))
 ```
+
+### Model Assessment
 
 Originally, y data column is logi data while yhat is numerical data. Thus, we need to use as.factor() to convert both columns to factors for comparison.
 
@@ -296,42 +335,28 @@ CM <- confusionMatrix(data=gwr.fixed$most, reference = gwr.fixed$y)
 CM
 ```
 
-### Model Assessment
+**Observation:** From the results above, we can see improvement in the accuracy (from 67.4% to 86.9%), as a result of improvements in both sensitivity (from 72.1% to 84.8%) and specificity (from 61.5% to 88.6%).
+
+Thus, **geographically weighted is a better model**, given the improvement in accuracy and increase in true negative (i.e. specificity) which allows for better explanation of non-functional waterpoint. To better manage the waterpoints, we need to look a **local strategy for specific LGAs** (in this case, we are looking at Osun).
+
+## Visualising gwLR
 
 ```{r}
-blr_confusion_matrix(model, cutoff = 0.5)
-```
-
-**Observations:** The validity of a cut-off (e.g. 0.5) is measured using sensitivity, specificity and accuracy.
-
--   Sensitivity: The % of correctly classified events out of all events = TP / (TP + FN)
-
--   Specificity: The % of correctly classified
-
--   Accuracy: The % of correctly classified events out of all events = (TP + TN) / (TP + FP + TN + FN)
-
-From the results, we see that the model gives us an accuracy of 0.6739, which is better than guessing (0.5).
-
-The sensitivity and specificity are 0.7207 and 0.6154 respectively. This shows that the true positives are slightly higher than the true negative prediction rates.
-
-Also from the results, local geographically weighted is a better model given the improvement in accuracy and increase in true negative which allows for better explanation of non-functional waterpoint. Thus, to better manage the waterpoints, we need to look a **local** strategy for specific neighbourhood (in this case, we are looking at Osun).
-
-```{r eval=FALSE}
 Osun_wp_sf_selected <- Osun_wp_sf_clean %>%
-  select(c(ADM2_EN, AMD2_PCODE,
-           ADM1_EN, AMD1_PCODE,
+  select(c(ADM2_EN, ADM2_PCODE,
+           ADM1_EN, ADM1_PCODE,
            status))
 ```
 
-```{r eval=FALSE}
-gwr_sf.fixed <- c.bind(Osun_wp_sf_selected, gwr.fixed)
+```{r}
+gwr_sf.fixed <- cbind(Osun_wp_sf_selected, gwr.fixed)
 ```
 
 ### Visualising coefficient estimates
 
 The code chunks below is used to create an interactive point symbol map.
 
-```{r eval=FALSE}
+```{r}
 tmap_mode("view")
 prob_T <- tm_shape(Osun)+
   tm_polygons(alpha = 0.1)+
@@ -345,15 +370,13 @@ tm_shape(gwr_sf.fixed) +
 prob_T
 ```
 
-### Visualising gwLR
-
-```{r eval=FALSE}
-tertiary_TV <- tm_shape(Osun)+ tm_polygons(alpha = 0.1) + tm_shape(gwr_sf.fixed) +
-tm_dots(col="distance to_tertiary _road_TV", border.col = "gray60", border.lwd = 1) + tm_view(set.zoom.limits = c(8,14))
+```{r}
+tertiary_TV <- tm_shape(Osun) +
+  tm_polygons(alpha = 0.1) +
+  tm_shape(gwr_sf.fixed) +
+  tm_dots(col = "distance_to_tertiary_road_TV",
+          border.col = "gray60",
+          border.lwd = 1) +
+  tm_view(set.zoom.limits = c(8,14))
+tertiary_TV
 ```
-
-```{r eval=FALSE}
-tmap_arrange(tertiary_SE, tertiary_TV, asp=1, ncol=2, sync = TRUE) 
-```
-
-###Removing the 2 insignificant data columns Remove water_point_population & local_population_1km before recalculating bandwidth
